<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="telephoneNumber"
        android:summary="@string/telephon_summary_preference"
        android:title="@string/telephone_title_pref" >
    </EditTextPreference>

    <CheckBoxPreference
        android:key="sendMessage"
        android:summaryOff="@string/send_false_summary"
        android:summaryOn="@string/send_true_summary"
        android:title="@string/send_message_pref" />

    <EditTextPreference
        android:key="textMessage"
        android:summary="@string/textMessageSummary"
        android:title="@string/textMessageTitle" />
    
    <EditTextPreference
        android:defaultValue="1000"
        android:key="safeDistance"
        android:summary="@string/max_safe_distance_summary"
        android:title="@string/maxSafeDistance" />

</PreferenceScreen>